--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,8 @@
     background-color: #f8f8f8
 } */
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0;
+     font-family: Roboto, "Helvetica Neue", sans-serif;
+     background-color: #f8f8f8;
+
+    }
