--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <div  class="container">
     <div class="first-line">
         <h1>Sign in to Slack</h1>
@@ -7,26 +9,11 @@
     <div class="form-container"> 
 
   
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" style="width: 40%; margin: 24px;" dir="rtl" action="">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" style="width: 40%;"  action="">
 
-            <div class="user-name" style="margin-bottom: 10px;">
-        <input  id="inputs0"  formControlName="firstName" type="text" placeholder="הזן שם משתמש" [ngClass]="{'has-error' :
-        registerForm.get('firstName').errors &&
-        (registerForm.get('firstName').dirty)}">
-        <span *ngIf="registerForm.get('firstName').errors &&
-        (registerForm.get('firstName').dirty)">
     
-          <span style="color: red;" *ngIf="registerForm.get('firstName').errors.required">
-            זהו שדה חובה
-          </span>
-    
-          <span style="color: red;" *ngIf="registerForm.get('firstName').errors.minlength">
-            שם פרטי חייב להיות לפחות 2 אותיות
-          </span>
-        </span>
-            </div>
             <div class="email" style="margin-bottom: 10px;">
-        <input id="inputs2" formControlName="email" type="text" placeholder='הזן כתובת דוא"ל' [ngClass]="{'has-error' :
+        <input id="inputs2" formControlName="email" type="text" placeholder="you@example.com" [ngClass]="{'has-error' :
         registerForm.get('email').errors &&
         (registerForm.get('email').dirty)}">
     
@@ -42,7 +29,7 @@
         </span>
             </div>
             <div class="password" style="margin-bottom: 10px;">
-        <input id="inputs3" formControlName="password" class="b" type="password" placeholder="הזן סיסמה" [ngClass]="{'has-error' :
+        <input id="inputs3" formControlName="password" class="b" type="password" placeholder="password" [ngClass]="{'has-error' :
           registerForm.get('password').errors &&
           (registerForm.get('password').dirty)}">
     
@@ -56,16 +43,14 @@
           </span>
         </span>
             </div>
-    
-        <button  type="submit" style="background-color: #007a5a; width: 270px;" mat-raised-button
-          color="primary">הרשמה</button>
-
-          <!-- <button  type="submit" [disabled]="!registerForm.valid"   style="background-color: #007a5a; width: 260px;" mat-raised-button
-          color="primary">הרשמה</button> -->
-    
-      </form>
-
-    </div>
+            
+       
+            <button routerLink="/app-main-chat-room" type="submit" [disabled]="!registerForm.valid"   style="background-color: #007a5a; width: 270px;" mat-raised-button
+              color="primary">Sign in</button>
+              
+            </form>
+            
+          </div>
 
 
 </div>
