--- a/src/app/components/main-chat-room/main-chat-room.component.html
+++ b/src/app/components/main-chat-room/main-chat-room.component.html
@@ -3,6 +3,10 @@
        <div >
             <br><br><br>
                <div style="margin-left: 10%">
+                    <p style=" color: #FFFFFF;">Channel name</p>
+                    <p style=" color: #FFFFFF;">user name</p><br>
+
+
 
                      <div style="display: flex">
                             <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> message </span></div><span>..</span>
@@ -59,16 +63,14 @@
                         <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> arrow_upward </span></div><span>..</span>
                            <div > <span style=" color: #FFFFFF;"> Show less</span></div>
                                </div>
-                                 <p></p>
+                                
                     </div>
                 </div>
                 <hr>
         <div >
-            <br><br><br>
+            
             <div style="margin-left: 10%">
             
-                    <p style=" color: #FFFFFF;">Channel name</p>
-                    <p style=" color: #FFFFFF;">user name</p>
                     <p style=" color: #FFFFFF;">Cannels</p>
                    
             </div>
