--- a/src/app/components/main-chat-room/main-chat-room.component.html
+++ b/src/app/components/main-chat-room/main-chat-room.component.html
@@ -9,7 +9,7 @@
 
 
                      <div style="display: flex">
-                            <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> message </span></div><span>..</span>
+                            <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> message </span></div><span style="color: #350d36">..</span>
                                  <div > <span style=" color: #FFFFFF;">Threads</span></div>
                                 </div>
                             <p></p>
@@ -23,44 +23,44 @@
                             <p></p>
 
                     <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> account_balance_wallet </span></div><span>..</span>
+                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> account_balance_wallet </span></div><span style="color: #350d36">..</span>
                         <div > <span style=" color: #FFFFFF;">Drafts</span></div>
                            </div>
                            <p></p>
                             
                    <div style="display: flex">
-                           <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> turned_in_not </span></div><span>..</span>
+                           <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> turned_in_not </span></div><span style="color: #350d36">..</span>
                                  <div > <span style=" color: #FFFFFF;">Saved items</span></div>
                                   </div>
                                   <p></p>
 
                   <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> youtube_searched_for </span></div><span>..</span>
+                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> youtube_searched_for </span></div><span style="color: #350d36">..</span>
                             <div > <span style=" color: #FFFFFF;">Channel browser  </span></div>
                                    </div>
                                    <p></p>
 
                   <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> contacts </span></div><span>..</span>
+                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> contacts </span></div><span style="color: #350d36">..</span>
                              <div > <span style=" color: #FFFFFF;">People</span></div>
                                  </div>
                                  <p></p>
 
                      <div style="display: flex">
-                             <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> apps </span></div><span>..</span>
+                             <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> apps </span></div><span style="color: #350d36">..</span>
                                  <div > <span style=" color: #FFFFFF;"> Apps</span></div>
                                      </div>
                                       <p></p>
 
 
                    <div style="display: flex">
-                      <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> filter_none </span></div><span>..</span>
+                      <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> filter_none </span></div><span style="color: #350d36">..</span>
                           <div > <span style=" color: #FFFFFF;"> Files</span></div>
                               </div>
                               <p></p>
 
                   <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> arrow_upward </span></div><span>..</span>
+                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> arrow_upward </span></div><span style="color: #350d36">..</span>
                            <div > <span style=" color: #FFFFFF;"> Show less</span></div>
                                </div>
                                 
@@ -70,8 +70,21 @@
         <div >
             
             <div style="margin-left: 10%">
+
+                    <div style="display: flex">
+                            <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons">  arrow_drop_down </span></div><span style="color: #350d36">..</span>
+                               <div > <span style=" color: #FFFFFF;">Cannels</span></div><span style="color: #350d36">....................</span>
+                               <span style="color: #FFFFFF; font-size: 20px" class="material-icons"> add </span>
+
+                                   </div>
+                                   <p></p>
+
+                      <div style="display: flex">
+                            <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons">  arrow_drop_down </span></div><span style="color: #350d36">..</span>
+                                   <div > <span style=" color: #FFFFFF;">Direct messages</span></div><span style="color: #350d36">.....</span>
+                                   <span style="color: #FFFFFF; font-size: 20px" class="material-icons"> add </span>
+                                     </div>
             
-                    <p style=" color: #FFFFFF;">Cannels</p>
                    
             </div>
             
