--- a/src/app/components/main-chat-room/main-chat-room.component.css
+++ b/src/app/components/main-chat-room/main-chat-room.component.css
@@ -1,16 +1,35 @@
 .haeder {
   width: 100%;
-  height: 40px;
+  height: 50px;
   background-color: #350d36;
 }
 
 .left-menu {
   background-color: #3f0e40;
-  height: 2425%;
-  width: 13%;
+  width: 18%;
+  overflow: auto;
+  max-height: 100vh
 }
 hr { display: block; height: 1px;
-    border: 0; border-top: 1px solid rgb(82,38,83);;
+    border: 0; border-top: 1px solid rgb(82,38,83);
     margin: 1em 0; padding: 0; }
 p{
     font-family: 'Lato', sans-serif;}
+
+/* Chrome, Safari */
+
+::-webkit-scrollbar {
+  width: 15px;
+  height: 15px;
+  }
+  ::-webkit-scrollbar-track-piece  {
+  background-color: #3f0e40;
+  }
+  ::-webkit-scrollbar-thumb:vertical {
+  height: 10px;
+  background-color: rgb(188,171,188);
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 15px;
+  }
