--- a/src/app/components/main-chat-room/main-chat-room.component.html
+++ b/src/app/components/main-chat-room/main-chat-room.component.html
@@ -1,4 +1,21 @@
 <div class="haeder" >
+
+        <!-- <span  style="color: #FFFFFF; font-size: 16px"  class="material-icons">schedule </span> -->
+   
+    <span  style="color: #FFFFFF; font-size: 24px; float: right; margin-right: 1%; margin-top: 10px;" class="material-icons">help_outline</span>
+   
+    <div style="text-align: center; border-radius: 5px; border: solid 1px #FFFFFF; width: 35%; margin-left: 33%;
+     background-color: rgb(82,38,83);">
+     
+     <input style="  width: 90%; height: 30px; border-width:0px;
+     border:none; border-color: rgb(82,38,83);
+         color: #FFFFFF; font-size: large; background-color:  rgb(82,38,83);;" value="Searrch Channel" type="text">
+     <img  src="../../../assets/baseline_search_white_18dp.png" alt="">
+    </div>
+    
+   
+</div>
+
     <div class="left-menu" >
        <div >
             <br><br><br>
@@ -6,15 +23,12 @@
                     <p style=" color: #FFFFFF;">Channel name</p>
                     <p style=" color: #FFFFFF;">user name</p><br>
 
-
-
                      <div style="display: flex">
                             <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> message </span></div><span style="color: #350d36">..</span>
                                  <div > <span style=" color: #FFFFFF;">Threads</span></div>
                                 </div>
                             <p></p>
                               
-
                     <div style="display: flex">
                         <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> blur_circular
                             </span></div><span>..</span>
@@ -84,8 +98,13 @@
                                    <div > <span style=" color: #FFFFFF;">Direct messages</span></div><span style="color: #350d36">.....</span>
                                    <span style="color: #FFFFFF; font-size: 20px" class="material-icons"> add </span>
                                      </div>
-            
-                   
+<!-- --------------------------------------------------------------------------------------------- -->
+<br><br><br><br><br><br><br><br><br>
+<p>asasasasas</p>
+
+
+
+
             </div>
             
         </div>
@@ -94,4 +113,3 @@
    
 
     
-</div>
