--- a/src/app/components/main-chat-room/main-chat-room.component.html
+++ b/src/app/components/main-chat-room/main-chat-room.component.html
@@ -1,115 +1,190 @@
-<div class="haeder" >
-
-        <!-- <span  style="color: #FFFFFF; font-size: 16px"  class="material-icons">schedule </span> -->
-   
-    <span  style="color: #FFFFFF; font-size: 24px; float: right; margin-right: 1%; margin-top: 10px;" class="material-icons">help_outline</span>
-   
-    <div style="text-align: center; border-radius: 5px; border: solid 1px #FFFFFF; width: 35%; margin-left: 33%;
-     background-color: rgb(82,38,83);">
-     
-     <input style="  width: 90%; height: 30px; border-width:0px;
-     border:none; border-color: rgb(82,38,83);
-         color: #FFFFFF; font-size: large; background-color:  rgb(82,38,83);;" value="Searrch Channel" type="text">
-     <img  src="../../../assets/baseline_search_white_18dp.png" alt="">
-    </div>
-    
-   
+<div class="haeder">
+  <span class="user">Welcome {{name}}</span>
+  <!-- <span style="
+      color: #ffffff;
+      font-size: 24px;
+      float: right;
+      margin-right: 1%;
+      margin-top: 10px;
+    " class="material-icons">help_outline</span> -->
 </div>
+<div style="display: flex;">
+  <div class="left-menu">
+    <div>
+      <br /><br /><br />
+      <div style="margin-left: 10%;">
+        <!-- <p style="color: #ffffff;">Channel name</p>
+      <p style="color: #ffffff;">user name</p>
+      <br /> -->
 
-    <div class="left-menu" >
-       <div >
-            <br><br><br>
-               <div style="margin-left: 10%">
-                    <p style=" color: #FFFFFF;">Channel name</p>
-                    <p style=" color: #FFFFFF;">user name</p><br>
-
-                     <div style="display: flex">
-                            <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> message </span></div><span style="color: #350d36">..</span>
-                                 <div > <span style=" color: #FFFFFF;">Threads</span></div>
-                                </div>
-                            <p></p>
-                              
-                    <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> blur_circular
-                            </span></div><span>..</span>
-                            <div > <span style=" color: #FFFFFF;">Mentions & reactions</span></div>
-                            </div>
-                            <p></p>
-
-                    <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> account_balance_wallet </span></div><span style="color: #350d36">..</span>
-                        <div > <span style=" color: #FFFFFF;">Drafts</span></div>
-                           </div>
-                           <p></p>
-                            
-                   <div style="display: flex">
-                           <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> turned_in_not </span></div><span style="color: #350d36">..</span>
-                                 <div > <span style=" color: #FFFFFF;">Saved items</span></div>
-                                  </div>
-                                  <p></p>
-
-                  <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> youtube_searched_for </span></div><span style="color: #350d36">..</span>
-                            <div > <span style=" color: #FFFFFF;">Channel browser  </span></div>
-                                   </div>
-                                   <p></p>
-
-                  <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> contacts </span></div><span style="color: #350d36">..</span>
-                             <div > <span style=" color: #FFFFFF;">People</span></div>
-                                 </div>
-                                 <p></p>
-
-                     <div style="display: flex">
-                             <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> apps </span></div><span style="color: #350d36">..</span>
-                                 <div > <span style=" color: #FFFFFF;"> Apps</span></div>
-                                     </div>
-                                      <p></p>
-
-
-                   <div style="display: flex">
-                      <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> filter_none </span></div><span style="color: #350d36">..</span>
-                          <div > <span style=" color: #FFFFFF;"> Files</span></div>
-                              </div>
-                              <p></p>
-
-                  <div style="display: flex">
-                        <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons"> arrow_upward </span></div><span style="color: #350d36">..</span>
-                           <div > <span style=" color: #FFFFFF;"> Show less</span></div>
-                               </div>
-                                
-                    </div>
-                </div>
-                <hr>
-        <div >
-            
-            <div style="margin-left: 10%">
-
-                    <div style="display: flex">
-                            <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons">  arrow_drop_down </span></div><span style="color: #350d36">..</span>
-                               <div > <span style=" color: #FFFFFF;">Cannels</span></div><span style="color: #350d36">....................</span>
-                               <span style="color: #FFFFFF; font-size: 20px" class="material-icons"> add </span>
-
-                                   </div>
-                                   <p></p>
-
-                      <div style="display: flex">
-                            <div><span style="color: #FFFFFF; font-size: 16px" class="material-icons">  arrow_drop_down </span></div><span style="color: #350d36">..</span>
-                                   <div > <span style=" color: #FFFFFF;">Direct messages</span></div><span style="color: #350d36">.....</span>
-                                   <span style="color: #FFFFFF; font-size: 20px" class="material-icons"> add </span>
-                                     </div>
-<!-- --------------------------------------------------------------------------------------------- -->
-<br><br><br><br><br><br><br><br><br>
-<p>asasasasas</p>
-
-
-
-
-            </div>
-            
+        <!-- <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            message
+          </span>
         </div>
-        <hr>
-    </div>
-   
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;">Threads</span></div>
+      </div>
+      <p></p>
 
-    
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            blur_circular
+          </span>
+        </div>
+        <span>..</span>
+        <div><span style="color: #ffffff;">Mentions & reactions</span></div>
+      </div>
+      <p></p>
+
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            account_balance_wallet
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;">Drafts</span></div>
+      </div>
+      <p></p>
+
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            turned_in_not
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;">Saved items</span></div>
+      </div>
+      <p></p>
+
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            youtube_searched_for
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;">Channel browser </span></div>
+      </div>
+      <p></p>
+
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            contacts
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;">People</span></div>
+      </div>
+      <p></p>
+
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            apps
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;"> Apps</span></div>
+      </div>
+      <p></p>
+
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            filter_none
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;"> Files</span></div>
+      </div>
+      <p></p>
+
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            arrow_upward
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;"> Show less</span></div>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div>
+    <div style="margin-left: 10%;">
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            arrow_drop_down
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;">Cannels</span></div>
+        <span style="color: #350d36;">....................</span>
+        <span style="color: #ffffff; font-size: 20px;" class="material-icons">
+          add
+        </span>
+      </div>
+      <p></p>
+
+      <div style="display: flex;">
+        <div>
+          <span style="color: #ffffff; font-size: 16px;" class="material-icons">
+            arrow_drop_down
+          </span>
+        </div>
+        <span style="color: #350d36;">..</span>
+        <div><span style="color: #ffffff;">Direct messages</span></div>
+        <span style="color: #350d36;">.....</span>
+        <span style="color: #ffffff; font-size: 20px;" class="material-icons">
+          add
+        </span>
+      </div> -->
+
+        <div *ngFor="let user of userArr$ | async">
+          <p (click)="clickUser(user)" style="color: #ffffff; cursor: pointer;">
+            {{ user.name }}
+          </p>
+        </div>
+        <br /><br /><br /><br /><br /><br /><br /><br /><br />
+      </div>
+    </div>
+    <hr />
+  </div>
+
+  <div class="main-chat-section">
+
+    <div class="warrper-textarea">
+      <textarea id="w3review" type="text" #massege rows="4" cols="140" placeholder={{messagePlaceholder}}></textarea>
+    </div>
+
+    d
+
+    <div class="warrper-sendmassege">
+      <div class="inner-sendmassege" (click)="addMassege(massege.value)">
+        <span class="arrow-span" class="material-icons">play_arrow </span>
+      </div>
+    </div>
+
+    <div class="start-chat-user">
+      <!-- <div *ngFor="let i of sortData"> 
+        {{ i.updatedAt.seconds * 1000 | date:'MM-dd-yyyy' }}, 
+      </div> -->
+
+      <div *ngFor="let masseage of sortData">
+        <p [ngStyle]="{'background-color': masseage.userId == userId && masseage.clinetId == clinetId ? '#dcf8c6' : '#f1f3f0'}  "
+          ngClass="masseages" *ngIf="masseage.userId == userId && masseage.clinetId == clinetId
+          || masseage.userId == clinetId && masseage.clinetId == userId">
+          {{masseage.massege}}</p>
+      </div>
+    </div>
+  </div>
+  <!-- ----------------------------------------- -->
+</div>
