--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -2,12 +2,33 @@
 
 <div class="container">
   <div class="first-line">
-    <h1>Sign in to Slack</h1>
-    <h3>Enter your Slack With Email & Password</h3>
+    <h1>Sign up to Slack</h1>
+    <h3>Enter Email & Password</h3>
   </div>
 
   <div class="form-container">
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" style="width: 40%;" action="">
+      <div class="userName" style="margin-bottom: 10px;">
+        <input id="userNameInp" formControlName="userName" class="b" type="text" placeholder="Enter Your Username"
+          [ngClass]="{
+            'has-error':
+              registerForm.get('userName').errors &&
+              registerForm.get('userName').dirty
+          }" />
+
+        <span *ngIf="
+            registerForm.get('userName').errors &&
+            registerForm.get('userName').dirty
+          ">
+          <span style="color: red;" *ngIf="registerForm.get('password').errors.required">
+            זהו שדה חובה
+          </span>
+          <span style="color: red;" *ngIf="registerForm.get('password').errors.minlength">
+            שם משתמש חייבת להיות בעלת 2 תווים
+          </span>
+        </span>
+      </div>
+
       <div class="email" style="margin-bottom: 10px;">
         <input id="inputs2" formControlName="email" type="text" placeholder="you@example.com" [ngClass]="{
             'has-error':
@@ -46,16 +67,17 @@
         </span>
       </div>
 
-      <button (click)="onSubmit()" routerLink="/app-main-chat-room" type="submit" [disabled]="!registerForm.valid"
-        style="background-color: #007a5a; width: 270px;" mat-raised-button color="primary">
-        Sign in
+      <button routerLink="/app-main-chat-room" type="submit" [disabled]="!registerForm.valid"
+        style="background-color: #007a5a; width: 270px;" mat-raised-button color="primary" (click)="onSubmit()">
+        Sign up
       </button>
     </form>
     <br />
   </div>
-  <div class="link-to-sign-up">
-    <span>Dont Have Acount ? </span>
-    <a routerLink="/log-in">Click Here </a>
-    <span>To Sign up</span>
+  <div class="link-to-sign-in">
+    <span> Already Have an Acount ? </span>
+    <a routerLink="/app-sign-in">Click Here </a>
+    <span>To Sign in</span>
   </div>
+
 </div>
