--- a/src/app/components/main-chat-room/main-chat-room.component.css
+++ b/src/app/components/main-chat-room/main-chat-room.component.css
@@ -2,19 +2,28 @@
   width: 100%;
   height: 50px;
   background-color: #350d36;
+  
 }
 
 .left-menu {
   background-color: #3f0e40;
   width: 18%;
   overflow: auto;
-  max-height: 100vh
+  max-height: 100vh;
+  min-height: 100vh;
+  
 }
-hr { display: block; height: 1px;
-    border: 0; border-top: 1px solid rgb(82,38,83);
-    margin: 1em 0; padding: 0; }
-p{
-    font-family: 'Lato', sans-serif;}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid rgb(82, 38, 83);
+  margin: 1em 0;
+  padding: 0;
+}
+p {
+  font-family: "Lato", sans-serif;
+}
 
 /* Chrome, Safari */
 
@@ -33,3 +42,65 @@ p{
   ::-webkit-scrollbar-thumb {
     border-radius: 15px;
   }
+
+.start-chat-user {
+  overflow: auto;
+  max-height: 100vh;
+  width: 173vh; 
+  height: 76vh;
+  padding-left: 5%;
+
+}
+
+.warrper-textarea {
+  position: fixed;
+  bottom: 0%;
+  width: 80%;
+  opacity: 1;
+  margin-bottom: 2%;
+  margin-left: 5%;
+}
+
+.warrper-sendmassege {
+  /* position: fixed;
+  margin-left: 54%;
+  margin-top: 47%; */
+}
+
+.inner-sendmassege {
+  width: 30px;
+  height: 30px;
+  background-color: #007a5a;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.arrow-span {
+  color: #ffffff;
+  font-size: 25px;
+  margin-top: 3px;
+  margin-left: 1px;
+}
+
+.masseages{
+background-color: #f1f3f0;
+;
+padding: 20px;
+width: fit-content;
+border-radius: 10px;
+
+}
+
+.user{
+  color: #ffffff;
+  margin-left: 75%;
+  width: fit-content;
+  padding: 10px;
+}
+textarea{
+  font-size: larger;
+}
+
+.main-chat-section{  
+ 
+}
