--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -46,7 +46,7 @@
         </span>
       </div>
 
-      <button (click)="onSubmit()" routerLink="/app-main-chat-room" type="submit" [disabled]="!registerForm.valid"
+      <button (click)="onSubmit()"  type="submit" [disabled]="!registerForm.valid"
         style="background-color: #007a5a; width: 270px;" mat-raised-button color="primary">
         Sign in
       </button>
