--- a/src/app/components/main-chat-room/main-chat-room.component.html
+++ b/src/app/components/main-chat-room/main-chat-room.component.html
@@ -54,10 +54,6 @@
 -------------------------------------------------------------------------------------------------------
 ------------------------------------------------------------------------------------------------------- -->
 
-
-
-
-
 <div class="container app">
   <div class="row app-one">
     <div class="col-sm-4 side">
@@ -65,7 +61,8 @@
         <div class="row heading">
           <div class="col-sm-3 col-xs-3 heading-avatar">
             <div class="heading-avatar-icon">
-              <img src="https://bootdey.com/img/Content/avatar/avatar1.png">
+              <img src={{userImg}} alt="">
+              <!-- <img src="https://bootdey.com/img/Content/avatar/avatar1.png"> -->
             </div>
           </div>
           <div class="col-sm-1 col-xs-1  heading-dot  pull-right">
@@ -84,9 +81,7 @@
             </div>
           </div>
         </div>
-
         <div class="row sideBar">
-
 
           <!-- ------------------------------------------------------------------------------------------ -->
 
@@ -108,24 +103,16 @@
                 </div>
               </div>
             </div>
-
-
           </div>
-
-
-
         </div>
       </div>
-
-
-
     </div>
-
     <div class="col-sm-8 conversation">
       <div class="row heading">
         <div class="col-sm-2 col-md-1 col-xs-3 heading-avatar">
           <div class="heading-avatar-icon">
-            <img src="https://bootdey.com/img/Content/avatar/avatar6.png">
+            <img src={{imgSrc}} alt="">
+            <!-- <img src="https://bootdey.com/img/Content/avatar/avatar6.png"> -->
           </div>
         </div>
         <div class="col-sm-8 col-xs-7 heading-name">
@@ -157,14 +144,13 @@
                   {{masseage.massege}}
                 </p>
               </div>
-              <!-- <span class="message-time pull-right"> Sun</span> -->
+              <span class="message-time pull-right"> Sun</span>
             </div>
           </div>
         </div>
 
       </div>
 
-      <!-- ////////////////////////////////////////////////////////// -->
 
       <div class="row reply">
         <div class="col-sm-1 col-xs-1 reply-emojis">
@@ -177,7 +163,7 @@
           <i class="fa fa-microphone fa-2x" aria-hidden="true"></i>
         </div>
         <div class="col-sm-1 col-xs-1 reply-send">
-          <i (click)="addMassege(massege.value)" class="fa fa-send fa-2x" aria-hidden="true"></i>
+          <i (click)="addMassege(massege.value)" massege.value = '' class="fa fa-send fa-2x" aria-hidden="true"></i>
         </div>
       </div>
     </div>
